tests/kulezi_tests/bad/undeclared_return_type.lat
int main() {
    f();
    return 0;
}

bool f() { return true; }